infrastructure/base/kyverno/kyverno.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
  labels:
    networking.tinyrack.net/isolation: enabled
